--- a/terms (1).html
+++ b/terms (1).html
@@ -25,6 +25,13 @@
 <h2>5. Contact</h2>
 <p>For any inquiries, please email <a href="mailto:oleksandryevstafyev@icloud.com">oleksandryevstafyev@icloud.com</a>.</p>
 
+<h2>6. Support the Project</h2>
+<p><strong>This app is completely free and contains no advertising.</strong> It was created as an independent educational resource to help users prepare for the Canadian amateur radio license exam.</p>
+<p>If you find this app useful and would like it to remain free in the future, you can support its development with a voluntary donation. Your contribution helps cover maintenance, updates, and further improvements.</p>
+<p><strong>Support via PayPal:</strong><br>
+<a href="https://paypal.me/Yevstafyev?locale.x=en_US&country.x=CA" target="_blank">https://paypal.me/Yevstafyev</a></p>
+<p>Thank you for your support and trust!</p>
+
 <p>Thank you for using <strong>Canada Amateur Radio Exam Test (HAM Test)</strong>.</p>
 </body>
 </html>
